fixed content spacing and paragraph formatting

--- a/client/src/components/Posts/Post.css
+++ b/client/src/components/Posts/Post.css
@@ -14,6 +14,10 @@
   margin: 2rem auto;
 }
 
+.paragraph {
+  white-space: pre-wrap;
+}
+
 .post h3 {
   font-size: 3rem;
   margin-bottom: -1rem;
